--- a/environment.yaml
+++ b/environment.yaml
@@ -3,64 +3,62 @@ channels:
   - defaults
 dependencies:
   - bzip2=1.0.8=he774522_0
-  - ca-certificates=2023.01.10=haa95532_0
-  - certifi=2022.12.7=py310haa95532_0
-  - libffi=3.4.2=hd77b12b_6
-  - openssl=1.1.1t=h2bbff1b_0
-  - pip=23.0.1=py310haa95532_0
-  - python=3.10.10=h966fe2a_2
-  - setuptools=65.6.3=py310haa95532_0
-  - sqlite=3.41.1=h2bbff1b_0
+  - ca-certificates=2023.05.30=haa95532_0
+  - libffi=3.4.4=hd77b12b_0
+  - openssl=3.0.10=h2bbff1b_2
+  - pip=23.2.1=py310haa95532_0
+  - python=3.10.12=he1021f5_0
+  - setuptools=68.0.0=py310haa95532_0
+  - sqlite=3.41.2=h2bbff1b_0
   - tk=8.6.12=h2bbff1b_0
-  - tzdata=2022g=h04d1e81_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
   - wheel=0.38.4=py310haa95532_0
-  - wincertstore=0.2=py310haa95532_2
-  - xz=5.2.10=h8cc25b3_1
+  - xz=5.4.2=h8cc25b3_0
   - zlib=1.2.13=h8cc25b3_0
   - pip:
-      - attrs==22.2.0
       - colorama==0.4.6
       - coloredlogs==15.0.1
-      - cx-freeze==6.14.7
+      - cx-freeze==6.15.6
       - cx-logging==3.1.0
-      - exceptiongroup==1.1.1
-      - flatbuffers==23.3.3
+      - exceptiongroup==1.1.3
+      - flatbuffers==23.5.26
       - humanfriendly==10.0
-      - imageio==2.26.1
+      - imageio==2.31.3
       - iniconfig==2.0.0
-      - lief==0.12.3
+      - lazy-loader==0.3
+      - lief==0.13.2
       - mpmath==1.3.0
-      - networkx==3.0
-      - nibabel==5.0.1
-      - numpy==1.24.2
+      - networkx==3.1
+      - nibabel==5.1.0
+      - numpy==1.25.2
       - onnxruntime-gpu==1.15.1
-      - opencv-python==4.7.0.72
-      - openslide-python==1.2.0
-      - packaging==23.0
-      - pandas==1.5.3
-      - pillow==9.4.0
-      - pluggy==1.0.0
-      - protobuf==4.22.1
-      - pydicom==2.3.1
+      - opencv-python==4.8.0.76
+      - openslide-python==1.3.0
+      - packaging==23.1
+      - pandas==2.1.0
+      - pillow==10.0.0
+      - pluggy==1.3.0
+      - protobuf==4.24.2
+      - pydicom==2.4.3
       - pyreadline3==3.4.1
-      - pyside6==6.4.3
-      - pyside6-addons==6.4.3
-      - pyside6-essentials==6.4.3
-      - pytest==7.2.2
+      - pyside6==6.5.2
+      - pyside6-addons==6.5.2
+      - pyside6-essentials==6.5.2
+      - pytest==7.4.1
       - python-dateutil==2.8.2
-      - pytz==2022.7.1
+      - pytz==2023.3.post1
       - pywavelets==1.4.1
-      - ruamel-yaml==0.17.21
+      - ruamel-yaml==0.17.32
       - ruamel-yaml-clib==0.2.7
-      - scikit-image==0.19.3
-      - scipy==1.10.1
-      - shiboken6==6.4.3
+      - scikit-image==0.21.0
+      - scipy==1.11.2
+      - shiboken6==6.5.2
       - six==1.16.0
-      - slideio==2.0.7
+      - slideio==2.2.0
       - sortedcontainers==2.4.0
-      - sympy==1.11.1
-      - tifffile==2023.3.21
+      - sympy==1.12
+      - tifffile==2023.8.30
       - toml==0.10.2
       - tomli==2.0.1
+      - tzdata==2023.3
